# mlx-turbo

./: .gitignore  Cargo.toml  EVAL.md  LINKEDIN_DRAFT.md  README.md  bench_context.py  charts.py  generate.py  pyproject.toml
mlx_turbo/: __init__.py  kv_cache.py  metal_ops.py  patch.py  serve.py
mlx_turbo/kernels/: compress.metal  decompress.metal  fwht.metal
src/: codebook.rs  engine.rs  fwht.rs  lib.rs  quantizer.rs
tests/: test_algorithm.py
