[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mlx-turbo"
version = "0.1.0"
description = "TurboQuant KV cache compression for MLX on Apple Silicon"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.22.0",
    "mlx-lm>=0.22.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "mlx_turbo._core"
